--- a/server/simple/static/display.css
+++ b/server/simple/static/display.css
@@ -1,12 +1,44 @@
+/* EVERYTHING BELOW HERE IS FOR BLURY SMALL IMAGES */
 #tiny {
     -webkit-filter: blur(5px); /* Safari 6.0 - 9.0 */
     filter: blur(5px);
 }
 
-#hidden {
-    display: none;
+/* EVERYTHING BELOW HERE IS FOR STYLING TOP STUFF */
+body {
+    font-family: Arial, Helvetica, sans-serif;
 }
 
+a {
+    color: grey;
+}
+
+a:hover {
+    color: #383838;
+}
+
+#top {
+    text-align: center;
+    color: grey;
+    font-size: 28px;
+}
+
+p {
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+}
+
+span {
+    color: black;
+}
+
+#description {
+    margin-top: 20px;
+    font-size: 16px;
+    color: grey;
+}
+
+/* EVERYTHING BELLOW HERE IS FOR COLUMNS FOR IMAGES */
 .row {
     display: -ms-flexbox; /* IE10 */
     display: flex;
