--- a/server/simple/static/display.css
+++ b/server/simple/static/display.css
@@ -1,3 +1,19 @@
+/* EVERYTHING BELOW HERE CENTERS TEXT ON DIR PAGES */
+#container {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
+#centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  font-size: 25px;
+}
+
 /* EVERYTHING BELOW HERE IS FOR BLURY SMALL IMAGES */
 #tiny {
     -webkit-filter: blur(5px); /* Safari 6.0 - 9.0 */
@@ -34,6 +50,8 @@ span {
 
 #description {
     margin-top: 20px;
+    padding-bottom: 20px;
+    margin-bottom: 10px;
     font-size: 16px;
     color: grey;
 }
@@ -55,7 +73,7 @@ span {
     -ms-flex: 25%; /* IE10 */
     flex: 25%;
     max-width: 25%;
-    /*padding: 0 4px;*/
+    font-size: 0;
 }
 
 /* Responsive layout - makes a two column-layout instead of four columns */
